<resources>
    <string name="app_name">TripsWithFriends</string>

    <string name="hello_world">Hello world!</string>
    <string name="Names">Names</string>
    <string name="Location">Location</string>
    <string name="typeNames">Type Names</string>>
    <string name="typeLocation">Type Location</string>
    <string name="Time">Time ?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_atrip">Create A Trip</string>
</resources>
