<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.puneet.tripswithfriends.CreateATrip">

    <TextView
        android:text="@string/Names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"/>
    <EditText
        android:text="@string/typeNames"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"/>

    <TextView
        android:text="@string/Location"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="24sp"/>
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/typeLocation"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Time"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />
</LinearLayout>
